crud completo
